# serverless

./: .gitignore
.github/workflows/: api.yml  destroy.yml  infrastructure.yml  ui.yml
infrastructure/: cf_tasks.yml
services/tasks_api/: .env.development  create_dynamodb_locally.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_ui/: index.html  package-lock.json  package.json  serverless.yml
services/tasks_ui/src/: App.vue  aws-exports.js  main.js
