[project]
name = "tasks-api"
version = "0.1.0"
description = "Serverless app with FastAPI, DynamoDB, and Vue"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
